# subconverter_dialer

./: CMakeLists.txt  README-cn.md  README-docker.md  README.md
.github/workflows/: docker.yml  unit-tests.yml
base/: pref.example.ini  pref.example.toml  pref.example.yml
base/base/: all_base.tpl  singbox.json
base/config/: example_external_config.ini  example_external_config.toml  example_external_config.yml  nodnsleak.dialer.ini
docs/dev/: known-issue.md
scripts/: Dockerfile  Dockerfile.local
scripts/tests/: run_local_backend.sh  test_dialer_behavior.sh  test_dialer_behavior_toml.sh  test_dialer_behavior_yaml.sh  test_load_balance_strategy.sh  test_singbox_dialer_provider_fallback.sh  test_singbox_dialer_version.sh  test_singbox_geoip_deprecation.sh  test_singbox_reject_dependency.sh  test_singbox_transport_roundtrip.sh  test_ua_block_live.sh  test_ua_block_live_docker.sh  test_ua_block_live_native.sh  test_vless_transport_strict_mapping.sh
src/: main.cpp
src/config/: binding.h
src/generator/config/: nodemanip.cpp  ruleconvert.cpp  ruleconvert.h  subexport.cpp  subexport.h
src/handler/: interfaces.cpp  interfaces.h  settings.cpp  settings.h  webget.cpp
src/lib/: wrapper.cpp
src/parser/: subparser.cpp  subparser.h
src/parser/config/: proxy.h
src/server/: webserver.cpp
tests/: CMakeLists.txt  test_base64.cpp  test_file.cpp  test_infoparser.cpp  test_network.cpp  test_regexp.cpp  test_ruleconvert.cpp  test_settings.cpp  test_settings_stubs.cpp  test_string.cpp  test_subexport_nodemanip.cpp  test_template_jinja2.cpp  test_templates.cpp  test_urlencode.cpp  test_webget.cpp  test_webserver.cpp
tests/helpers/: test_helpers.h
